[project]
name = "focusrelay-api"
version = "0.1.0"
description = "FastAPI wrapper for FocusRelayMCP OmniFocus server"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/focusrelay_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
