[project]
name = "focusrelay-api"
version = "0.2.1"
description = "FastAPI wrapper for FocusRelayMCP OmniFocus server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
]

[project.scripts]
focusrelay-api = "focusrelay_api.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/focusrelay_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
